--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 		</div>
 	</div>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="js/test.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
